// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Input check render component w/o value 1`] = `
<div
  className="one-input-block"
>
  <input
    className="input"
    disabled={true}
    type="text"
  />
  <span
    className="error-message"
  />
</div>
`;

exports[`test Input check render component with onChange 1`] = `
<div
  className="one-input-block"
>
  <label
    className="title"
    htmlFor="testName"
  >
    testTitle
  </label>
  <input
    className="input"
    disabled={false}
    id="testName"
    name="testName"
    onChange={[MockFunction]}
    type="text"
    value="testValue"
  />
  <span
    className="error-message"
  />
</div>
`;

exports[`test Input check render component with title 1`] = `
<div
  className="one-input-block"
>
  <label
    className="title"
    htmlFor="testName"
  >
    testTitle
  </label>
  <input
    className="input"
    disabled={true}
    id="testName"
    name="testName"
    type="text"
    value="testValue"
  />
  <span
    className="error-message"
  />
</div>
`;

exports[`test Input check render component with type 1`] = `
<div
  className="one-input-block"
>
  <input
    className="input"
    disabled={true}
    type="password"
  />
  <span
    className="error-message"
  />
</div>
`;
